fix card responsive

--- a/index.html
+++ b/index.html
@@ -90,311 +90,282 @@
         </div>
       </div>
     </section>
-    <section class="card-section">
-      <div class="card-container">
-        <div class="card skill-1">
+    <section class="cards-section">
+      <div class="cards-container">
+        <div class="card">
           <div class="card-header">
-            <div>
-              <p>nos héros</p>
-              <p>/6 pts</p>
+            <div class="card-notation">
+              <span class="card-skill">DESIGN</span>
+              <span class="card-points">/6 pts</span>
             </div>
-            <div>
-              <h5>L'ARTISTE DE RENOM</h5>
-            </div>
+            <span class="card-name">L'ARTISTE DE RENOM</span>
           </div>
-          <img
-            src="./assets/card-1/cursor-1.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-1"
-          />
-          <div class="card-body">
-            <img src="./assets/card-1/artiste-1.png" alt="l'artiste de renom" />
-            <p>
-              <span>Le design</span>, c’est son terrain de jeu. <br />
-              Il maîtrise et retranscris correctement chaque pixel de la
-              maquette.
-            </p>
-            <p>
-              Virtuose des couleurs il ne se trompe jamais de code HEX, de
-              spacing ou de border-radius ; <br />
-              <span>Figma n’a aucun secret pour ce Dev de talent.</span>
-            </p>
+          <div class="card-content">
+            <div class="card-image-container">
+              <img
+                src="./assets/card-1/artiste-1.png"
+                alt="Pixel art of an artist in a forest"
+                class="card-image"
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-1/cursor-1.svg"
+                alt=""
+              />
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                <strong>Le design</strong>, c'est son terrain de jeu. Il
+                maîtrise et retranscrit correctement chaque pixel de la
+                maquette.
+              </p>
+              <p class="card-text">
+                Virtuose des couleurs il ne se trompe jamais de code HEX, de
+                spacing ou de border-radius ;
+                <strong>Figma n'a aucun secret pour ce Dev de talent.</strong>
+              </p>
+            </div>
           </div>
           <div class="card-footer">
             <img
-              class="sticker-1"
               src="./assets/card-1/sticker-1.svg"
               alt="sticker"
+              class="card-sticker"
             />
           </div>
         </div>
-      </div>
-      <div class="card-container">
-        <div class="card skill-2">
+
+        <div class="card">
           <div class="card-header">
-            <div>
-              <p>nos héros</p>
-              <p>/6 pts</p>
+            <div class="card-notation">
+              <span class="card-skill">CODE</span>
+              <span class="card-points">/6 pts</span>
             </div>
-            <div>
-              <h5>LE BÂTISSEUR DE CODE</h5>
-            </div>
+            <span class="card-name">LE BÂTISSEUR DE CODE</span>
           </div>
-          <img
-            src="./assets/card-2/cursor-2.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-1"
-          />
-          <div class="card-body">
-            <img
-              src="./assets/card-2/artiste-2.png"
-              alt="le batisseur de code"
-            />
-            <p>
-              Ses lignes de code sont des fondations solides. <br />
-              <span>C’est un maître du front</span>, capable de structurer
-              <br />
-              les systèmes les plus complexes sans se <br />
-              casser la tête.
-            </p>
-            <p>
-              <span>Maitre de VSCode</span>, il a surement fini le challenge en
-              s’assurant d’avoir le code le plus clair et le plus propre des 36
-              participants.
-            </p>
+          <div class="card-content">
+            <div class="card-image-container">
+              <img
+                src="./assets/card-2/artiste-2.png"
+                alt="Pixel art of an artist in a forest"
+                class="card-image"
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-1/cursor-1.svg"
+                alt=""
+              />
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                Ses lignes de code sont des fondations solides. C’est
+                <strong>un maître du front</strong>, capable de structurer les
+                systèmes les plus complexes sans se casser la tête.
+              </p>
+              <p class="card-text">
+                <strong>Maitre de VSCode</strong>, il a surement fini le
+                challenge en s’assurant d’avoir le code le plus clair et le plus
+                propre des 36 participants.
+              </p>
+            </div>
           </div>
           <div class="card-footer">
             <img
-              class="sticker-1"
               src="./assets/card-2/sticker-2.svg"
               alt="sticker"
+              class="card-sticker"
             />
           </div>
         </div>
-      </div>
-      <div class="card-container">
-        <div class="card skill-3">
+
+        <div class="card">
           <div class="card-header">
-            <div>
-              <p>nos héros</p>
-              <p>/3 pts</p>
+            <div class="card-notation">
+              <span class="card-skill">MOTION</span>
+              <span class="card-points">/3 pts</span>
             </div>
-            <div>
-              <h5>LE MAITRE DE LA FLUIDITÉ</h5>
-            </div>
+            <span class="card-name">LE MAITRE DE LA FLUIDITÉ</span>
           </div>
-          <img
-            src="./assets/card-3/cursor-3-1.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-1"
-          />
-          <img
-            src="./assets/card-3/cursor-3-2.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-2"
-          />
-          <div class="card-body">
-            <img
-              src="./assets/card-3/artiste-3.png"
-              alt="le maitre de la fluidité"
-            />
-            <p>
-              Aucun composant ne s’affiche sans une
-              <span>animation soignée</span>. Ses transitions sont <br />
-              légères, dynamiques et fluides, captivant l'utilisateur à chaque
-              interaction.
-            </p>
-            <p>
-              Ce dev a l’oeil et maitrise <span>le motion</span> mieux que
-              n’importe qui.
-            </p>
+          <div class="card-content">
+            <div class="card-image-container">
+              <img
+                src="./assets/card-3/artiste-3.png"
+                alt="Pixel art of an artist in a forest"
+                class="card-image"
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-3/cursor-3-1.svg"
+                alt=""
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-3/cursor-3-2.svg"
+                alt=""
+              />
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                Aucun composant ne s’affiche sans
+                <strong>une animation soignée</strong>. Ses transitions sont
+                légères, dynamiques et fluides, captivant l'utilisateur à chaque
+                interaction.
+              </p>
+              <p class="card-text">
+                Ce dev a l’oeil et maitrise <strong>le motion</strong> mieux que
+                n’importe qui.
+              </p>
+            </div>
           </div>
           <div class="card-footer">
             <img
-              class="sticker-1"
               src="./assets/card-3/sticker-3.svg"
               alt="sticker"
+              class="card-sticker"
             />
           </div>
         </div>
-      </div>
-      <div class="card-container">
-        <div class="card skill-4">
+
+        <div class="card">
           <div class="card-header">
-            <div>
-              <p>nos héros</p>
-              <p>/3 pts</p>
+            <div class="card-notation">
+              <span class="card-skill">RESPONSIVE</span>
+              <span class="card-points">/2 pts</span>
             </div>
-            <div>
-              <h5>LE CHERCHEUR DE<br />BREAKPOINT</h5>
-            </div>
+            <span class="card-name">LE CHERCHEUR DE BREAKPOINT</span>
           </div>
-          <img
-            src="./assets/card-4/cursor-4-1.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-1"
-          />
-          <img
-            src="./assets/card-4/cursor-4-2.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-2"
-          />
-          <div class="card-body">
-            <img
-              src="./assets/card-4/artiste-4.png"
-              alt="le chercheur de breakpoint"
-            />
-            <p>
-              Quelle que soit la taille de l’écran, il garantit une expérience
-              utilisateur sans faille. Chaque site
-              <span>s’adapte à tous les supports</span>, du mobile au<br />
-              grand écran.
-            </p>
-            <p>
-              Il fait attention à <span>chaque breakpoint attentivement</span>,
-              on ne pourra pas le reprendre à l’inspection!
-            </p>
+          <div class="card-content">
+            <div class="card-image-container">
+              <img
+                src="./assets/card-4/artiste-4.png"
+                alt="Pixel art of an artist in a forest"
+                class="card-image"
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-4/cursor-4-1.svg"
+                alt=""
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-4/cursor-4-2.svg"
+                alt=""
+              />
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                Quelle que soit la taille de l’écran, il garantit une expérience
+                utilisateur sans faille. Chaque site
+                <strong>s’adapte à tous les supports</strong>, du mobile au
+                grand écran.
+              </p>
+              <p class="card-text">
+                Il fait attention à
+                <strong>chaque breakpoint</strong> attentivement, on ne pourra
+                pas le reprendre à l’inspection!
+              </p>
+            </div>
           </div>
           <div class="card-footer">
             <img
-              class="sticker-1"
               src="./assets/card-4/sticker-4.svg"
               alt="sticker"
+              class="card-sticker"
             />
           </div>
         </div>
-      </div>
-      <div class="card-container">
-        <div class="card skill-5">
+
+        <div class="card">
           <div class="card-header">
-            <div>
-              <p>nos héros</p>
-              <p>/3 pts</p>
+            <div class="card-notation">
+              <span class="card-skill">EASTER EGG</span>
+              <span class="card-points">/3 pts</span>
             </div>
-            <div>
-              <h5>LE MAITRE DES SECRETS</h5>
-            </div>
+            <span class="card-name">LE MAITRE DES SECRETS</span>
           </div>
-          <img
-            src="./assets/card-5/cursor-5-1.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-1"
-          />
-          <img
-            src="./assets/card-5/cursor-5-2.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-2"
-          />
-          <div class="card-body">
-            <img
-              src="./assets/card-5/artiste-5.png"
-              alt="le maître des secrets"
-            />
-            <p>
-              Derrière une ligne de code bien choisie se<br />
-              cache un <span>secret bien gardé</span>. Il glisse la surprise qui
-              surprendra les utilisateurs les plus curieux.
-            </p>
-            <p>
-              Dev attentif aux comportements utilisateurs il saura cacher
-              <span>l’Easter Egg</span> au meilleur endroit.
-            </p>
+          <div class="card-content">
+            <div class="card-image-container">
+              <img
+                src="./assets/card-5/artiste-5.png"
+                alt="Pixel art of an artist in a forest"
+                class="card-image"
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-5/cursor-5-1.svg"
+                alt=""
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-5/cursor-5-2.svg"
+                alt=""
+              />
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                Derrière une ligne de code bien choisie se cache un
+                <strong>secret bien gardé</strong>. Il glisse la surprise qui
+                surprendra les utilisateurs les plus curieux.
+              </p>
+              <p class="card-text">
+                Dev attentif aux comportements utilisateurs il saura cacher
+                l’<strong>Easter Egg</strong> au meilleur endroit.
+              </p>
+            </div>
           </div>
           <div class="card-footer">
             <img
-              class="sticker-1"
               src="./assets/card-5/sticker-5.svg"
               alt="sticker"
+              class="card-sticker"
             />
           </div>
         </div>
-      </div>
-      <div class="card-container">
-        <div class="card skill-6">
+        <div class="card">
           <div class="card-header">
-            <div>
-              <p>nos héros</p>
-              <p>/3 pts</p>
+            <div class="card-notation">
+              <span class="card-skill">BIG BOSS</span>
+              <span class="card-points">/Infinite pts</span>
             </div>
-            <div>
-              <h5>LE MAITRE DES MAITRES</h5>
-            </div>
+            <span class="card-name">LE SUR-BOOSTED</span>
           </div>
-          <img
-            src="./assets/card-6/cursor-6-1.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-1"
-          />
-          <img
-            src="./assets/card-6/cursor-6-2.svg"
-            alt="comment-cursor"
-            class="comment-cursor cursor-2"
-          />
-          <div class="card-body">
-            <img
-              src="./assets/card-6/artiste-6.png"
-              alt="le maître des maitres"
-            />
-            <p>
-              Il excelle dans tous les domaines, alliant<br />
-              design, propreté de code, réactivité,<br />
-              animations fluides et créativité cachée.
-              <span>Un vrai prodige</span>
-              qui a su briller dans chaque aspect du développement.
-            </p>
-            <p>
-              Ce dev aux <span>multitalents</span> a reçu la standing<br />
-              ovation du jury.
-            </p>
+          <div class="card-content">
+            <div class="card-image-container">
+              <img
+                src="./assets/card-6/artiste-6.png"
+                alt="Pixel art of an artist in a forest"
+                class="card-image"
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-6/cursor-6-1.svg"
+                alt=""
+              />
+              <img
+                class="card-cursor"
+                src="./assets/card-6/cursor-6-2.svg"
+                alt=""
+              />
+            </div>
+            <div class="card-description">
+              <p class="card-text">
+                Il excelle dans tous les domaines, alliant design, propreté de
+                code, réactivité, animations fluides et créativité cachée.
+                <strong>Un vrai prodige</strong> qui a su briller dans chaque
+                aspect du développement.
+              </p>
+              <p class="card-text">
+                Ce dev aux <strong>multitalents</strong> a reçu la standing
+                ovation du jury.
+              </p>
+            </div>
           </div>
           <div class="card-footer">
             <img
-              class="sticker-1"
               src="./assets/card-6/sticker-6.svg"
               alt="sticker"
+              class="card-sticker"
             />
-          </div>
-        </div>
-      </div>
-      <div class="card-container">
-        <div class="card skill-7" id="card-7">
-          <div class="card-header">
-            <div>
-              <p>/ FINALE02</p>
-            </div>
-            <img src="./assets/card-7/Vector.svg" alt="Vector" />
-          </div>
-          <div class="card-body">
-            <div class="a">
-              <span>Click</span>
-              <span>Me</span>
-              <span>?</span>
-            </div>
-            <div class="a">
-              <span>Might</span>
-              <span>enter</span>
-            </div>
-            <div>
-              <span>the finals</span>
-            </div>
-          </div>
-          <div class="card-footer">
-            <img
-              class="v1"
-              src="./assets/card-7/Vectorasterix.svg"
-              alt="Vector"
-            />
-            <img
-              class="v2"
-              src="./assets/card-7/Vectorbalise.svg"
-              alt="Vector"
-            />
-            <img
-              class="v3"
-              src="./assets/card-7/Vectoreclair.svg"
-              alt="Vector"
-            />
-            <button class="button">Enter Next Level</button>
           </div>
         </div>
       </div>
