--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
     <section class="cards-section">
       <div class="cards-container">
-        <div class="card">
+        <div class="card skill-1">
           <div class="card-header">
             <div class="card-notation">
               <span class="card-skill">DESIGN</span>
@@ -108,7 +108,7 @@
                 class="card-image"
               />
               <img
-                class="card-cursor"
+                class="card-cursor-1"
                 src="./assets/card-1/cursor-1.svg"
                 alt=""
               />
@@ -124,18 +124,16 @@
                 spacing ou de border-radius ;
                 <strong>Figma n'a aucun secret pour ce Dev de talent.</strong>
               </p>
+              <img
+                src="./assets/card-1/sticker-1.svg"
+                alt="sticker"
+                class="card-sticker"
+              />
             </div>
-          </div>
-          <div class="card-footer">
-            <img
-              src="./assets/card-1/sticker-1.svg"
-              alt="sticker"
-              class="card-sticker"
-            />
           </div>
         </div>
 
-        <div class="card">
+        <div class="card skill-2">
           <div class="card-header">
             <div class="card-notation">
               <span class="card-skill">CODE</span>
@@ -151,8 +149,8 @@
                 class="card-image"
               />
               <img
-                class="card-cursor"
-                src="./assets/card-1/cursor-1.svg"
+                class="card-cursor-1"
+                src="./assets/card-2/cursor-2.svg"
                 alt=""
               />
             </div>
@@ -178,7 +176,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card skill-3">
           <div class="card-header">
             <div class="card-notation">
               <span class="card-skill">MOTION</span>
@@ -194,12 +192,12 @@
                 class="card-image"
               />
               <img
-                class="card-cursor"
+                class="card-cursor-1"
                 src="./assets/card-3/cursor-3-1.svg"
                 alt=""
               />
               <img
-                class="card-cursor"
+                class="card-cursor-2"
                 src="./assets/card-3/cursor-3-2.svg"
                 alt=""
               />
@@ -226,7 +224,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card skill-4">
           <div class="card-header">
             <div class="card-notation">
               <span class="card-skill">RESPONSIVE</span>
@@ -242,12 +240,12 @@
                 class="card-image"
               />
               <img
-                class="card-cursor"
+                class="card-cursor-1"
                 src="./assets/card-4/cursor-4-1.svg"
                 alt=""
               />
               <img
-                class="card-cursor"
+                class="card-cursor-2"
                 src="./assets/card-4/cursor-4-2.svg"
                 alt=""
               />
@@ -275,7 +273,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card skill-5">
           <div class="card-header">
             <div class="card-notation">
               <span class="card-skill">EASTER EGG</span>
@@ -291,12 +289,12 @@
                 class="card-image"
               />
               <img
-                class="card-cursor"
+                class="card-cursor-1"
                 src="./assets/card-5/cursor-5-1.svg"
                 alt=""
               />
               <img
-                class="card-cursor"
+                class="card-cursor-2"
                 src="./assets/card-5/cursor-5-2.svg"
                 alt=""
               />
@@ -321,7 +319,7 @@
             />
           </div>
         </div>
-        <div class="card">
+        <div class="card skill-6">
           <div class="card-header">
             <div class="card-notation">
               <span class="card-skill">BIG BOSS</span>
@@ -337,12 +335,12 @@
                 class="card-image"
               />
               <img
-                class="card-cursor"
+                class="card-cursor-1"
                 src="./assets/card-6/cursor-6-1.svg"
                 alt=""
               />
               <img
-                class="card-cursor"
+                class="card-cursor-2"
                 src="./assets/card-6/cursor-6-2.svg"
                 alt=""
               />
@@ -366,6 +364,34 @@
               alt="sticker"
               class="card-sticker"
             />
+          </div>
+        </div>
+
+        <div class="card skill-7">
+          <div class="card-header">
+            <div class="card-notation">
+              <span class="card-points">/ FINALE02</span>
+            </div>
+            <img class="papate" src="./assets/card-7/Vector.svg" class="" />
+          </div>
+          <div class="card-content">
+            <div class="card-description">
+              <div class="span">
+                <span>Click</span>
+                <span>Me</span>
+                <span>?</span>
+              </div>
+              <div class="span">
+                <span>Might</span>
+                <span>enter</span>
+              </div>
+              <div>
+                <span>the finals</span>
+              </div>
+            </div>
+          </div>
+          <div class="card-button">
+            <button class="button">Enter Next Level</button>
           </div>
         </div>
       </div>
