--- a/index.html
+++ b/index.html
@@ -391,6 +391,21 @@
             </div>
           </div>
           <div class="card-button">
+            <img
+              class="sticker-button"
+              src="./assets/card-7/Vectorasterix.svg"
+              alt=""
+            />
+            <img
+              class="sticker-button"
+              src="./assets/card-7/Vectorbalise.svg"
+              alt=""
+            />
+            <img
+              class="sticker-button"
+              src="./assets/card-7/Vectoreclair.svg"
+              alt=""
+            />
             <button class="button">Enter Next Level</button>
           </div>
         </div>
