--- a/index.html
+++ b/index.html
@@ -17,14 +17,8 @@
       </div>
       <div class="header-bottom">
         <span class="badge">LA PISCINE</span>
-        <span class="percentage">0%</span>
         <label class="theme-switch" aria-label="Toggle theme">
-          <input
-            type="checkbox"
-            id="theme-toggle"
-            aria-pressed="false"
-            checked
-          />
+          <input type="checkbox" id="checkbox" aria-pressed="false" />
           <span class="switch-slider"></span>
         </label>
       </div>
@@ -48,7 +42,7 @@
           </div>
         </div>
         <div class="playing-card-container">
-          <div class="playing-card">
+          <div class="playing-card" id="playingCard">
             <img src="./assets/stickers/logo.svg" class="logo" />
             <img class="crown" src="./assets/stickers/crown.svg" alt="crown" />
             <img
@@ -431,9 +425,6 @@
     <footer class="footer">
       <div>
         <span class="badge">LA PISCINE</span>
-      </div>
-      <div>
-        <span class="percentage">100%</span>
       </div>
       <div>
         <span class="date">@2024</span>
