--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Clash of Dev, que le/la meilleur dev l'emporte !"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -13,7 +17,7 @@
   <body>
     <div class="container-header">
       <div class="header-top">
-        <div id="progress-bar" aria-label="progress bar"></div>
+        <div id="progress-bar"></div>
       </div>
       <div class="header-bottom">
         <span class="badge">LA PISCINE</span>
@@ -43,7 +47,7 @@
         </div>
         <div class="playing-card-container">
           <div class="playing-card" id="playingCard">
-            <img src="./assets/stickers/logo.svg" class="logo" />
+            <img src="./assets/stickers/logo.svg" class="logo" alt="logo" />
             <img class="crown" src="./assets/stickers/crown.svg" alt="crown" />
             <img
               class="crown-small top-left"
@@ -68,14 +72,17 @@
             <img
               src="./assets/comment-cursors/Sometime.svg"
               class="comment-cursor some"
+              alt="cursor"
             />
             <img
               src="./assets/comment-cursors/Lina.svg"
               class="comment-cursor lina"
+              alt="cursor"
             />
             <img
               src="./assets/comment-cursors/Chris.svg"
               class="comment-cursor chris"
+              alt="cursor"
             />
           </div>
         </div>
@@ -115,13 +122,13 @@
             <div class="card-image-container">
               <img
                 src="./assets/card-1/artiste-1.png"
-                alt="Pixel art of an artist in a forest"
+                alt="artist"
                 class="card-image"
               />
               <img
                 class="card-cursor-1"
                 src="./assets/card-1/cursor-1.svg"
-                alt=""
+                alt="cursor"
               />
             </div>
             <div class="card-description">
@@ -156,13 +163,13 @@
             <div class="card-image-container">
               <img
                 src="./assets/card-2/artiste-2.png"
-                alt="Pixel art of an artist in a forest"
+                alt="artist"
                 class="card-image"
               />
               <img
                 class="card-cursor-1"
                 src="./assets/card-2/cursor-2.svg"
-                alt=""
+                alt="cursor"
               />
             </div>
             <div class="card-description">
@@ -199,18 +206,18 @@
             <div class="card-image-container">
               <img
                 src="./assets/card-3/artiste-3.png"
-                alt="Pixel art of an artist in a forest"
+                alt="artist"
                 class="card-image"
               />
               <img
                 class="card-cursor-1"
                 src="./assets/card-3/cursor-3-1.svg"
-                alt=""
+                alt="cursor"
               />
               <img
                 class="card-cursor-2"
                 src="./assets/card-3/cursor-3-2.svg"
-                alt=""
+                alt="cursor"
               />
             </div>
             <div class="card-description">
@@ -247,18 +254,18 @@
             <div class="card-image-container">
               <img
                 src="./assets/card-4/artiste-4.png"
-                alt="Pixel art of an artist in a forest"
+                alt="artist"
                 class="card-image"
               />
               <img
                 class="card-cursor-1"
                 src="./assets/card-4/cursor-4-1.svg"
-                alt=""
+                alt="cursor"
               />
               <img
                 class="card-cursor-2"
                 src="./assets/card-4/cursor-4-2.svg"
-                alt=""
+                alt="cursor"
               />
             </div>
             <div class="card-description">
@@ -296,18 +303,18 @@
             <div class="card-image-container">
               <img
                 src="./assets/card-5/artiste-5.png"
-                alt="Pixel art of an artist in a forest"
+                alt="artist"
                 class="card-image"
               />
               <img
                 class="card-cursor-1"
                 src="./assets/card-5/cursor-5-1.svg"
-                alt=""
+                alt="cursor"
               />
               <img
                 class="card-cursor-2"
                 src="./assets/card-5/cursor-5-2.svg"
-                alt=""
+                alt="cursor"
               />
             </div>
             <div class="card-description">
@@ -342,18 +349,18 @@
             <div class="card-image-container">
               <img
                 src="./assets/card-6/artiste-6.png"
-                alt="Pixel art of an artist in a forest"
+                alt="artist"
                 class="card-image"
               />
               <img
                 class="card-cursor-1"
                 src="./assets/card-6/cursor-6-1.svg"
-                alt=""
+                alt="cursor"
               />
               <img
                 class="card-cursor-2"
                 src="./assets/card-6/cursor-6-2.svg"
-                alt=""
+                alt="cursor"
               />
             </div>
             <div class="card-description">
@@ -383,7 +390,11 @@
             <div class="card-notation">
               <span class="card-points">/ FINALE02</span>
             </div>
-            <img class="papate" src="./assets/card-7/Vector.svg" class="" />
+            <img
+              class="papate"
+              src="./assets/card-7/Vector.svg"
+              class="sticker"
+            />
           </div>
           <div class="card-content">
             <div class="card-description">
@@ -405,17 +416,17 @@
             <img
               class="sticker-button"
               src="./assets/card-7/Vectorasterix.svg"
-              alt=""
+              alt="sticker"
             />
             <img
               class="sticker-button"
               src="./assets/card-7/Vectorbalise.svg"
-              alt=""
+              alt="sticker"
             />
             <img
               class="sticker-button"
               src="./assets/card-7/Vectoreclair.svg"
-              alt=""
+              alt="sticker"
             />
             <button class="button">Enter Next Level</button>
           </div>
